# igorm_messanger

./: .gitignore  CMakeLists.txt  ConsoleReader.cpp  ConsoleReader.h  README.txt  client.cpp  client.h  defs.h  igorm_messanger_uk_UA.ts  main.cpp  server.cpp  server.h
